# gitwatcher

./: .gitignore  Cargo.toml  README.md
reports/: report_2025-01-18 11:14:13.md
src/: git_flow.rs  main.rs  mistral_analyzer.rs
